--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="output" path="bin/default"/>
 	<classpathentry output="bin/main" kind="src" path="src/main/java">
 		<attributes>
 			<attribute name="gradle_scope" value="main"/>
@@ -29,13 +28,14 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:\Users\Neo\MCreatorWorkspaces\vanilla\build\natives"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="output" path="bin/default"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8/"/>
-	<classpathentry sourcepath="C:/Users/Neo/.mcreator/gradle/caches/forge_gradle/minecraft_user_repo/net/minecraftforge/forge/1.14.4-28.2.3_mapped_snapshot_20190719-1.14.3/forge-1.14.4-28.2.3_mapped_snapshot_20190719-1.14.3-sources.jar" kind="lib" path="C:/Users/Neo/.mcreator/gradle/caches/forge_gradle/minecraft_user_repo/net/minecraftforge/forge/1.14.4-28.2.3_mapped_snapshot_20190719-1.14.3/forge-1.14.4-28.2.3_mapped_snapshot_20190719-1.14.3-recomp.jar">
+	<classpathentry kind="lib" path="C:/Users/Neo/.mcreator/gradle/caches/forge_gradle/minecraft_user_repo/net/minecraftforge/forge/1.14.4-28.2.3_mapped_snapshot_20190719-1.14.3/forge-1.14.4-28.2.3_mapped_snapshot_20190719-1.14.3.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry sourcepath="C:/Users/Neo/.mcreator/gradle/caches/forge_gradle/minecraft_user_repo/net/minecraftforge/forge/1.14.4-28.2.3_mapped_snapshot_20190719-1.14.3/forge-1.14.4-28.2.3_mapped_snapshot_20190719-1.14.3-sources.jar" kind="lib" path="C:/Users/Neo/.mcreator/gradle/caches/forge_gradle/minecraft_user_repo/net/minecraftforge/forge/1.14.4-28.2.3_mapped_snapshot_20190719-1.14.3/forge-1.14.4-28.2.3_mapped_snapshot_20190719-1.14.3-launcher.jar">
+	<classpathentry kind="lib" path="C:/Users/Neo/.mcreator/gradle/caches/forge_gradle/minecraft_user_repo/net/minecraftforge/forge/1.14.4-28.2.3_mapped_snapshot_20190719-1.14.3/forge-1.14.4-28.2.3_mapped_snapshot_20190719-1.14.3-launcher.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
